<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_card"
            android:icon="@drawable/ic_add_card"
            android:title="@string/menu_add_card" />
        <item
            android:id="@+id/nav_card_manage"
            android:icon="@drawable/ic_card_manage"
            android:title="@string/menu_card_manage" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>
</menu>
