<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/bg_glass_toolbar"
            android:elevation="@dimen/glass_elevation"
            app:navigationIcon="@drawable/ic_menu"
            app:popupTheme="@style/Theme.Verso"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/screen_padding"
            android:paddingEnd="@dimen/screen_padding"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/search_edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_height"
                android:layout_weight="1"
                android:background="@drawable/bg_search"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                android:textSize="@dimen/definition_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/search_height"
                android:layout_marginStart="6dp"
                android:background="@drawable/bg_glass_primary_button"
                android:text="@string/search_button"
                android:textColor="@color/white"
                android:textSize="@dimen/definition_text"
                app:cornerRadius="@dimen/glass_radius_sm" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/glass_border" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/results_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/empty_results"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/definition_text"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg_glass"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
